@@ -5,22 +5,24 @@ Description: Allows form managers to download entries from their respondents
     using Wufoo JSON API. Additionally, the Wufoo reports - when public - can be
     also acquired programmatically. Note that building new forms within this package
     is not supported.
-Version: 0.5.9
-Date: 2016-02-15
+Version: 0.6.1
+Date: 2016-03-07
 Authors@R: c(
-    person("John", "Malc", email = "cincenko@outlook.com", role = c("aut", "cre"), comment = "@dmpe")
+    person("John", "Malc", email = "cincenko@outlook.com", role = c("aut", "cre"), comment = "@dmpe"),
+    person("Maksim", "Pecherskiy", role = c("ctb"), comment = "@MrMaksimize")
     )
 Maintainer: John Malc <cincenko@outlook.com>
-Depends: R (>= 3.2.0)
+Depends: R (>= 3.2.2)
 Imports: httr (>= 1.1.0), jsonlite (>= 0.9.19), dplyr (>= 0.4.3)
-Suggests: roxygen2 (>= 5.0.1), knitr (>= 1.12), testthat (>= 0.11.0)
+Suggests: roxygen2 (>= 5.0.1), knitr (>= 1.12.3), testthat (>= 0.11.0)
 VignetteBuilder: knitr
 License: Apache License 2.0
-URL: https://github.com/dmpe/wufoor
-BugReports: https://github.com/dmpe/wufoor/issues
+URL: http://github.com/dmpe/wufoor
+BugReports: http://github.com/dmpe/wufoor/issues
 RoxygenNote: 5.0.1
 NeedsCompilation: no
-Packaged: 2016-02-15 14:04:49 UTC; jm
-Author: John Malc [aut, cre] (@dmpe)
+Packaged: 2016-03-07 08:59:21 UTC; jm
+Author: John Malc [aut, cre] (@dmpe),
+  Maksim Pecherskiy [ctb] (@MrMaksimize)
 Repository: CRAN
-Date/Publication: 2016-02-15 16:03:08
+Date/Publication: 2016-03-08 06:22:38
