@@ -1,26 +1,26 @@
-907ef010af2e3e12deaf70e9ca7d43c3 *DESCRIPTION
-d838794af9175ef0fe2aa3eb9f73781e *NAMESPACE
-1e00a99d39b36364049f465067b41443 *NEWS
+c24f31b8da46049738325360bac547f2 *DESCRIPTION
+66fa49c4b62d16cf264c1cf1de1a4093 *NAMESPACE
+2825bd970a37938d00960559c2fcfdc4 *NEWS
 63e954b4a73a3553932effbdd024caf5 *R/API.R
-cbff67afa2238383eebe076584747fe2 *R/Fields.R
-64fb81c48da41b5fde4ce3bec95eb06c *R/Form.R
-68b02e265221d9cd46953f0b223ca420 *R/Reports.R
-aa53d65977a2bfc4f7d5891568a6a4f0 *R/Users.R
-3d813747a5f7fb813b0bc5a0d4d572b9 *README.md
-fcf5811fe0b762f6d8f9a1f5b4e5cf92 *build/vignette.rds
-04a335bb5cef26b9d02b456f6e6b8fc6 *inst/doc/Tutorial.R
-1e08134c5257de7915dcd883110a757c *inst/doc/Tutorial.Rmd
-f14666eed64396a5a7326e2e76a9f30b *inst/doc/Tutorial.html
-b1351839fe198fe4c34f6b63987da232 *man/auth_name.Rd
-8a3b1589973a5a300881b05662d4ae1e *man/fields_info.Rd
-fb1f30d2c23e9323ab6f964ec1eaed20 *man/form_entries.Rd
-021ce19ab082d36d0add75258dc46042 *man/form_entriesCount.Rd
-1b7cb6e1dcc2ede41ae8173406fde401 *man/form_entriesFromCSV.Rd
-f088847124f8867b3a8d44d8d3727c35 *man/form_info.Rd
-3241356465c5b4eaea56832caadadc64 *man/reports_info.Rd
-c6261c87e326b78c2065bacfbd3dac3e *man/user_info.Rd
+1a89076e106525052ba08f51d0007904 *R/Fields.R
+7518ec9b3cbcf0337074115e8343c62f *R/Form.R
+209e03243f282964e05824e35faf2722 *R/Reports.R
+86412529698dea5f3400e080fa9f0b41 *R/Users.R
+9e6cf3c8b18209a1a907fbadb964125c *README.md
+14632e90ff25f15d8a73f8f6376c3480 *build/vignette.rds
+8e9c5a6d7c81de042c6cc54bc41b96b2 *inst/doc/Tutorial.R
+6c1b8471f56059f20c8dc3a69c3c48a4 *inst/doc/Tutorial.Rmd
+56b3dd113331406fa24454327188a9fb *inst/doc/Tutorial.html
+82ffde76158fbf2986d78125645f7008 *man/auth_name.Rd
+7f16c5192f3d0119076db3ddddcf5da9 *man/fields_info.Rd
+d7b3a2f09e5306701f25c66cfa9edc2a *man/form_entries.Rd
+6d4ad085de78cdc8d196db79b5a61c29 *man/form_entriesCount.Rd
+d3657cb4f0894f6ff4c5e7316ecbb24b *man/form_entriesFromCSV.Rd
+bd102c834c22537e0b0a464400f85014 *man/form_info.Rd
+598a4046e52881efb67e4fbec168b024 *man/reports_info.Rd
+9377b146cb33fac486e5262d501118bc *man/user_info.Rd
 9090cf3da17a441ab205a8cca6d69930 *tests/testthat.R
 d7b1e5320787d89d6702cc87d152dbed *tests/testthat/test-fieldsAndreports.R
 93a8d526a15ae500cd7161c1b494d8a4 *tests/testthat/test-forms.R
 c426540a73145e6d7d8ea1eea1049d44 *tests/testthat/test-users.R
-25f92bd0897dda98f904767907ae64a6 *vignettes/Tutorial.Rmd
+6c1b8471f56059f20c8dc3a69c3c48a4 *vignettes/Tutorial.Rmd
