@@ -2,6 +2,9 @@ For the current development, the user can
 see: https://github.com/dmpe/WufooR
 
 ###
+March 2016     - Thanks to Maksim, new 'pageStart' and 'pageSize' parameters
+                 in 'form_entries' have been added https://github.com/dmpe/WufooR/pull/4
+
 February 2016  - Update packages
                - Make documentation more explicit about what is expected
                - Add 2 new parametrs: domain and debugConnection
